zz-out/pass14_run2/zz-scripts/chapter07/plot_fig02_delta_phi_heatmap.err
  File "/home/jplal/MCGT/zz-scripts/chapter07/plot_fig02_delta_phi_heatmap.py", line 162
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
